# DNSet

./: .gitignore  CMakeLists.txt  README.md
dep/dnslib/: message.h  qs.h  rr.h
etc/: dnset.conf
src/: config.cpp  config.h  forwarder.cpp  forwarder.h  main.cpp  matcher.cpp  matcher.h  testconfig.cpp  testmatcaher.cpp  testmatcher.cpp  testtree.cpp  tree.cpp  tree.h  utils.h
